Fixed issue connected with fonts, they were invisible while loading

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
   font-family: 'Icons';
   font-weight: normal;
   font-style: normal;
+  font-display: block;
   src: url("./assets/fonts/icons/icons.eot") format('eot');
   src: url("./assets/fonts/icons/icons.svg") format('svg');
   src: url("./assets/fonts/icons/icons.ttf") format('truetype');
@@ -12,6 +13,7 @@
   src: local('Raleway'), local('Raleway'),
   url('./assets/fonts/ralewayRegular/Raleway-Regular.ttf') format('truetype'),
   url('./assets/fonts/ralewayRegular/Raleway-Regular.svg#Raleway') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -19,6 +21,7 @@
   src: local('Raleway-Light'), local('Raleway-Light'),
   url('./assets/fonts/ralewayLight/Raleway-Light.ttf') format('truetype'),
   url('./assets/fonts/ralewayLight/Raleway-Light.svg#Raleway') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -26,6 +29,7 @@
   src: local('Raleway-LightItalic'), local('Raleway-LightItalic'),
   url('./assets/fonts/ralewayLightItalic/Raleway-LightItalic.ttf') format('truetype'),
   url('./assets/fonts/ralewayLightItalic/Raleway-LightItalic.svg#Raleway') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -33,6 +37,7 @@
   src: local('Raleway-Bold'), local('Raleway-Bold'),
   url('./assets/fonts/ralewayBold/Raleway-Bold.ttf') format('truetype'),
   url('./assets/fonts/ralewayBold/Raleway-Bold.svg#Raleway-Bold') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -40,6 +45,7 @@
   src: local('Raleway-Medium'), local('Raleway-Medium'),
   url('./assets/fonts/ralewayMedium/Raleway-Medium.ttf') format('truetype'),
   url('./assets/fonts/ralewayMedium/Raleway-Medium.svg#Raleway') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -47,6 +53,7 @@
   src: local('Raleway-SemiBold'), local('Raleway-SemiBold'),
   url('./assets/fonts/ralewaySemiBold/Raleway-SemiBold.ttf') format('truetype'),
   url('./assets/fonts/ralewaySemiBold/Raleway-SemiBold.svg#Raleway') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -54,6 +61,7 @@
   src: local('OpenSans'), local('OpenSans'),
   url('./assets/fonts/openSansRegular/OpenSans-Regular.ttf') format('truetype'),
   url('./assets/fonts/openSansRegular/OpenSans-Regular.svg#OpenSans') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -61,6 +69,7 @@
   src: local('OpenSans-Bold'), local('OpenSans-Bold'),
   url('./assets/fonts/openSansBold/OpenSans-Bold.ttf') format('truetype'),
   url('./assets/fonts/openSansBold/OpenSans-Bold.svg#OpenSans') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -68,6 +77,7 @@
   src: local('OpenSans-SemiBold'), local('OpenSans-SemiBold'),
   url('./assets/fonts/openSansSemiBold/OpenSans-SemiBold.ttf') format('truetype'),
   url('./assets/fonts/openSansSemiBold/OpenSans-SemiBold.svg#OpenSans') format('svg');
+  font-display: block;
 }
 
 @font-face {
@@ -75,6 +85,7 @@
   src: local('OpenSans-Bold'), local('OpenSans-Bold'),
   url('./assets/fonts/openSansLight/OpenSans-Light.ttf') format('truetype'),
   url('./assets/fonts/openSansLight/OpenSans-Light.svg#OpenSans') format('svg');
+  font-display: block;
 }
 
 html {
